Added control on DB products